[gd_scene load_steps=11 format=3 uid="uid://dtkhfwxoj7fh3"]

[ext_resource type="Script" path="res://Prefabs/balloonPop.gd" id="1_3888x"]
[ext_resource type="Texture2D" uid="uid://djrauqkc4dvyc" path="res://sprites/balloon_yellow.png" id="2_2cr3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q36jf"]
atlas = ExtResource("2_2cr3w")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvpmn"]
atlas = ExtResource("2_2cr3w")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bktd5"]
atlas = ExtResource("2_2cr3w")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uooj0"]
atlas = ExtResource("2_2cr3w")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj26u"]
atlas = ExtResource("2_2cr3w")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_32k51"]
atlas = ExtResource("2_2cr3w")
region = Rect2(32, 32, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cs5b8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q36jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvpmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bktd5")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uooj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj26u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32k51")
}],
"loop": false,
"name": &"pop",
"speed": 30.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r0b68"]
radius = 9.0
height = 34.0

[node name="BalloonYellow" type="Area2D"]
position = Vector2(253, 169)
collision_mask = 2
script = ExtResource("1_3888x")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_cs5b8")
animation = &"pop"

[node name="OuterCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, -26)
scale = Vector2(6, 4)
shape = SubResource("CapsuleShape2D_r0b68")

[node name="Inner" type="Area2D" parent="."]
collision_mask = 2

[node name="InnerCollision" type="CollisionShape2D" parent="Inner"]
position = Vector2(1, -26)
scale = Vector2(3, 2)
shape = SubResource("CapsuleShape2D_r0b68")

[connection signal="area_entered" from="." to="." method="_on_outer_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="Inner" to="." method="_on_inner_area_entered"]
